--- a/explore.ipynb
+++ b/explore.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -328,24 +328,8 @@
       "Read frame :  297 True\n",
       "Read frame :  298 True\n",
       "Read frame :  299 True\n",
-      "Read frame :  300 False\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "Mismatch between array dtype ('<U32') and format specifier ('%.1f %.3f %.3f %.6f')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m~/.pyenv/versions/venv_radialctf/lib/python3.7/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36msavetxt\u001b[0;34m(fname, X, fmt, delimiter, newline, header, footer, comments, encoding)\u001b[0m\n\u001b[1;32m   1434\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1435\u001b[0;31m                     \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mformat\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1436\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: must be real number, not numpy.str_",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1053/1160176506.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    322\u001b[0m \u001b[0;31m#   need to improve formatting here, np array has to be single dtype so all string currently\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    323\u001b[0m \u001b[0;31m#np.savetxt(os.path.join(odir, \"results.txt\"), np.c_[times, r2avg, zavg, zsd], newline='\\n', fmt=['%12s','%12s','%12s','%12s'], header=\"      time       r2               zero avg          zero var\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 324\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msavetxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0modir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"results.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtimes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr2avg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mzavg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mzsd\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'%.1f'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'%.3f'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'%.3f'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'%.6f'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#, header=\"#      time       r2               zero avg          zero var\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    325\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    326\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36msavetxt\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;32m~/.pyenv/versions/venv_radialctf/lib/python3.7/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36msavetxt\u001b[0;34m(fname, X, fmt, delimiter, newline, header, footer, comments, encoding)\u001b[0m\n\u001b[1;32m   1437\u001b[0m                     raise TypeError(\"Mismatch between array dtype ('%s') and \"\n\u001b[1;32m   1438\u001b[0m                                     \u001b[0;34m\"format specifier ('%s')\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1439\u001b[0;31m                                     % (str(X.dtype), format)) from e\n\u001b[0m\u001b[1;32m   1440\u001b[0m                 \u001b[0mfh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1441\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Mismatch between array dtype ('<U32') and format specifier ('%.1f %.3f %.3f %.6f')"
+      "Read frame :  300 False\n",
+      "CLEAN END\n"
      ]
     },
     {
@@ -463,7 +447,7 @@
     "    else:\n",
     "        raise TypeError(f'Filetype {ftype} not recognised')\n",
     "\n",
-    "    print('Read frame : ', framecount, success)\n",
+    "    print('Read frame : ', framecount)\n",
     "\n",
     "    #leave loop if import unsuccessful (ie. no more frames)\n",
     "    if not success:\n",
@@ -663,11 +647,12 @@
     "    axgph.legend(loc=\"upper right\")\n",
     "   \n",
     "    #add stats to output matrices\n",
-    "    times[framecount]=etime*framecount\n",
+    "    times[framecount]=float(etime*(framecount+1))\n",
     "    zavg[framecount]=np.average(zvals)\n",
     "    zsd[framecount]=np.std(zvals)\n",
     "    r2avg[framecount]=np.average(r2)\n",
     "\n",
+    "#    print(\"et, fc, times\", etime, framecount, times[framecount])\n",
     "#   would be useful to report difference between sector ctfs as well\n",
     "\n",
     "\n",
@@ -684,64 +669,9 @@
     "#   times is a string at this point, convert to float\n",
     "times=times.astype(np.float64)\n",
     "\n",
-    "np.savetxt(os.path.join(odir, \"results.txt\"), np.c_[times, r2avg, zavg, zsd], newline='\\n', fmt=['%12.1f','%12.3f','%12.3f','%12.6f'], header=\"      time           r2     zero avg     zero var\")\n",
+    "np.savetxt(os.path.join(odir, \"results.txt\"), np.c_[times, r2avg, zavg, zsd], newline='\\n', fmt=['%12.2f','%12.5f','%12.5f','%12.6f'], header=\"      time           r2     zero avg     zero var\")\n",
     "\n",
     "print(\"CLEAN END\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<U10\n",
-      "float64\n",
-      "float64\n",
-      "float64\n",
-      "[ 0.   0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9  1.   1.1  1.2  1.3\n",
-      "  1.4  1.5  1.6  1.7  1.8  1.9  2.   2.1  2.2  2.3  2.4  2.5  2.6  2.7\n",
-      "  2.8  2.9  3.   3.1  3.2  3.3  3.4  3.5  3.6  3.7  3.8  3.9  4.   4.1\n",
-      "  4.2  4.3  4.4  4.5  4.6  4.7  4.8  4.9  5.   5.1  5.2  5.3  5.4  5.5\n",
-      "  5.6  5.7  5.8  5.9  6.   6.1  6.2  6.3  6.4  6.5  6.6  6.7  6.8  6.9\n",
-      "  7.   7.1  7.2  7.3  7.4  7.5  7.6  7.7  7.8  7.9  8.   8.1  8.2  8.3\n",
-      "  8.4  8.5  8.6  8.7  8.8  8.9  9.   9.1  9.2  9.3  9.4  9.5  9.6  9.7\n",
-      "  9.8  9.9 10.  10.1 10.2 10.3 10.4 10.5 10.6 10.7 10.8 10.9 11.  11.1\n",
-      " 11.2 11.3 11.4 11.5 11.6 11.7 11.8 11.9 12.  12.1 12.2 12.3 12.4 12.5\n",
-      " 12.6 12.7 12.8 12.9 13.  13.1 13.2 13.3 13.4 13.5 13.6 13.7 13.8 13.9\n",
-      " 14.  14.1 14.2 14.3 14.4 14.5 14.6 14.7 14.8 14.9 15.  15.1 15.2 15.3\n",
-      " 15.4 15.5 15.6 15.7 15.8 15.9 16.  16.1 16.2 16.3 16.4 16.5 16.6 16.7\n",
-      " 16.8 16.9 17.  17.1 17.2 17.3 17.4 17.5 17.6 17.7 17.8 17.9 18.  18.1\n",
-      " 18.2 18.3 18.4 18.5 18.6 18.7 18.8 18.9 19.  19.1 19.2 19.3 19.4 19.5\n",
-      " 19.6 19.7 19.8 19.9 20.  20.1 20.2 20.3 20.4 20.5 20.6 20.7 20.8 20.9\n",
-      " 21.  21.1 21.2 21.3 21.4 21.5 21.6 21.7 21.8 21.9 22.  22.1 22.2 22.3\n",
-      " 22.4 22.5 22.6 22.7 22.8 22.9 23.  23.1 23.2 23.3 23.4 23.5 23.6 23.7\n",
-      " 23.8 23.9 24.  24.1 24.2 24.3 24.4 24.5 24.6 24.7 24.8 24.9 25.  25.1\n",
-      " 25.2 25.3 25.4 25.5 25.6 25.7 25.8 25.9 26.  26.1 26.2 26.3 26.4 26.5\n",
-      " 26.6 26.7 26.8 26.9 27.  27.1 27.2 27.3 27.4 27.5 27.6 27.7 27.8 27.9\n",
-      " 28.  28.1 28.2 28.3 28.4 28.5 28.6 28.7 28.8 28.9 29.  29.1 29.2 29.3\n",
-      " 29.4 29.5 29.6 29.7 29.8 29.9]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(times.dtype)\n",
-    "print(r2avg.dtype)\n",
-    "print(zavg.dtype)\n",
-    "print(zsd.dtype)\n",
-    "\n",
-    "\n",
-    "tvar=times.astype(np.float64)\n",
-    "print(tvar)\n",
-    "\n",
-    "\n",
-    "\n",
-    "np.savetxt(os.path.join(odir, \"results.txt\"), np.c_[tvar, r2avg, zavg, zsd], newline='\\n', fmt=['%12.1f','%12.3f','%12.3f','%12.6f'], header=\"      time           r2     zero avg     zero var\")\n",
-    "\n",
-    "#np.c_[times, r2avg, zavg, zsd]"
    ]
   },
   {
@@ -839,26 +769,6 @@
     "axgph.legend(loc=\"upper right\")\n",
     "\n",
     "#fig.savefig(os.path.join(odir, \"singleplot.png\" ), dpi=300)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "227\n",
-      "uint8\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(img.max())\n",
-    "\n",
-    "print(img[0,0].dtype)"
    ]
   }
  ],
